# websearch-aii-agent

./: .env.example  .gitignore  Dockerfile  README.md  REPORT_TROUBLESHOOTING.md  WEB_SEARCH_USAGE.md  fix_report.py  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_pdf.py  test_reportlab.py  test_rich.py  test_view_report.py
market_research_cli/: fast_cli.py
market_research_cli/market_research_core/: Cargo.toml
market_research_cli/market_research_core/src/: lib.rs
market_research_cli/market_research_core_py/: __init__.py  market_research_core_py.py  setup.py
market_research_cli/reports/: ai_20250425_232435.md  ai_20250426_012849.md
market_research_cli/web_search/: __init__.py  brave_search.py
