[package]
name = "market_research_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "market_research_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
comrak = "0.18"  # For markdown processing
rayon = "1.7"    # For parallel processing
regex = "1.8"    # For text processing
anyhow = "1.0"   # For error handling
